syntax = "proto3";

option csharp_namespace = "Web";

package sub;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";


service SubscriberService{
  rpc ListSubscribers(google.protobuf.Empty) returns (SubscriberListReply);
  rpc GetSubscriber(GetSubscriberRequest) returns (SubscriberReply);
}


message GetSubscriberRequest{
  int32 id = 1;
}

message SubscriberReply{
  int32 id = 1;
  string first_name = 2;
  string last_name = 3;
  google.protobuf.StringValue patronymic = 4;
  google.protobuf.Timestamp date_of_birth = 5;
  string phone_number = 6;
  string email = 7;
  int32 rating = 8;
  google.protobuf.Int32Value tariff_id = 9;
  google.protobuf.StringValue date_of_creation = 10;
  google.protobuf.StringValue date_of_update = 11;
}

message SubscriberListReply{
  repeated SubscriberReply Subscribers = 1;
}